Fixed z-index and bump version 0.1.144

--- a/src/scss/backend/components/drawer.scss
+++ b/src/scss/backend/components/drawer.scss
@@ -5,7 +5,7 @@
   top: 60px;
   background-color: #fff;
   right: 0;
-  z-index: 2;
+  z-index: 3;
 }
 
 .drawer-frame {
